<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Please Call</string>
    <string name="sending">Sending Please Call...</string>
    <string name="app_settings_name">Please Call Settings</string>
    <string name="provider_title">Select provider</string>
    <string name="provider_dialog_title">Select provider</string>
    <string name="about_title">About</string>
    <string name="dev_home">Developer homepage</string>
    <string name="feedback">Feedback</string>
    <string name="rate_title">Rate Please Call</string>
    <string name="rate_message">You\'ve been using Please Call a lot. Would you like to rate it?</string>
    <string name="rate_yes">Yes</string>
    <string name="rate_later">Later</string>
    <string name="rate_no">Never</string>
</resources>