<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="providerPrefix"
        android:title="@string/provider_title"
        android:dialogTitle="@string/provider_dialog_title"
        android:entries="@array/provider_names"
        android:entryValues="@array/provider_prefixes"
        android:defaultValue="121" />
    <PreferenceScreen
        android:title="@string/about_title"
        android:key="about"
        android:persistent="false">
        <Preference android:title="@string/dev_home" >
            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.kierendavies.co.za" />
        </Preference>
        <Preference android:title="@string/feedback" >
            <intent android:action="android.intent.action.VIEW"
                android:data="mailto:dev@kierendavies.co.za?subject=Please Call feedback" />
        </Preference>
    </PreferenceScreen>
</PreferenceScreen>